<resources>
    <string name="app_name">Delta iShop</string>
    <string name="user_name">Username <font color='red'>*</font></string>
    <string name="password">Password <font color='red'>*</font></string>
    <string name="production_qty">Production Qty <font color='red'>*</font></string>
    <string name="shop">Shop <font color='red'>*</font></string>
    <string name="machine_id">Machine ID <font color='red'>*</font></string>
    <string name="emp_id">Emp ID <font color='red'>*</font></string>
    <string name="welcome">Welcome to</string>
    <string name="login_title">LP Drg Viewer Login</string>
    <string name="dealer">Dealer</string>
    <string name="distributor">Distributor</string>
    <string name="marketing_person">Marketing Person</string>
    <string name="enter_your_mobile_no">Enter your mobile no.</string>
    <string name="todo">TODO</string>
    <string name="get_otp">Get OTP</string>
    <string name="hint_mobile">XXXXX XXXXX</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="login">Login</string>
    <string name="didn_t_get_otp">Didn\'t get OTP ?</string>
    <string name="resend_otp">Resend OTP.</string>
    <string name="start">Start</string>
    <string name="close">Close</string>
    <string name="Rs">\u20B9</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="home">Home</string>
    <string name="warranty_desc">Checking your product warrenty is now very simple. Click here to scan your QR code to check warranty</string>
    <string name="status">Status</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="you_can_check_your_product_warranty_either_entering_your_product_serial_number_or_by_scanning_qr_code_from_your_product">You can check your product warranty either Entering your product serial number or by scanning QR code from your product.</string>
    <string name="demo_address"><![CDATA[Labh Cart Sales & Service, Palanpur - 385001]]></string>
    <string name="contact_person">Contact Person</string>
    <string name="demo_mail">irshad@duke.in</string>
    <string name="scan">Scan</string>
    <string name="title_activity_sales_entry_list">SalesEntryListActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="share_selected">Share Selected !</string>
    <string name="banking_details">Banking Details</string>
    <string name="personal_details">Personal Details</string>
    <string name="bank_name">Bank Name</string>
    <string name="sold_to">Sold To :</string>
    <string name="cancel">Cancel</string>
    <string name="quarterly_review">Quarterly Review</string>
    <string name="sales_entry">Sales Entry</string>
    <string name="complaint_module">Complaint Module</string>
    <string name="products">Products</string>
    <string name="enter_select_pump_serial_no">Enter/Select Pump Serial No</string>
    <string name="submit">Submit</string>
    <string name="edit_complaint">Edit Complaint</string>
    <string name="visit_report">Visit Report</string>
    <string name="service_charge">Service Charge</string>
    <string name="distributor_registration">Reg. Dealer/Distributor</string>
    <string name="dealer_registration">Dealer Registration</string>
    <string name="distributor_name">Distributor Name</string>
    <string name="type_here">Type Here..</string>
    <string name="person_name">Person Name</string>
    <string name="mail">abc@xyz.com</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirmation_hint">This is confirmation hint.</string>
    <string name="dismiss">Dismiss</string>
    <string name="yes">Yes</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="you_are_offline">You are offline.</string>
    <string name="desc_no_internet">It seems there is problem with your connection. Please check your network status.</string>
    <string name="yes_exit">Yes,Exit App.</string>
    <string name="app_close_desc">Are you sure, \nwant to exit from Labh Cart Dealer Application ?</string>
    <string name="close_duke_installation_tracker">Close Labh Cart Dealer</string>
    <string name="retry">Retry</string>
    <string name="no_server_connection">It seems like there is server connection issues, try after some time !!</string>
    <string name="server_connection_issues">Server Connection Issues</string>
    <string name="product_name">Product Name</string>
    <string name="hint">This is demo hint</string>
    <string name="message">Message</string>
    <string name="motor_serial_no">Motor Serial No</string>
    <string name="pump_serial_no">Pump Serial No</string>
    <string name="search_anything">Search Anything...</string>
    <string name="order_tracking">Order Tracking</string>
    <string name="news_letter">News Letter</string>
    <string name="image_description">image description</string>
    <string name="qty">Qty. :</string>
    <string name="customer">Customer :</string>
    <string name="delivery_date">Delivery Date :</string>
    <string name="price_list">Price list</string>
    <string name="order_received">Order Received</string>
    <string name="dispatch_report">Dispatch Report</string>
    <string name="schemes">Schemes</string>
    <string name="distributor_circular">Distributor Circular</string>
    <string name="sample_text">Components with responsive elevations may encounter other components as they move between
    their resting elevations and dynamic elevation offsets. Because material cannot pass
    through other material, components avoid interfering with one another any number of ways,
    whether on a per component basis or using the entire app layout.</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="search_to_search_activity_transition">search_to_search_activity_transition</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
</resources>
