<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lylLogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_20sdp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@id/imgDeltaLogo"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imgAppLogo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_20sdp"
            android:src="@drawable/ic_bhansali_techno_logo_1"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/gilroy_bold"
            android:gravity="center"
            android:text="Delta iShop"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_10sdp"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal"
            tools:ignore="DisableBaselineAlignment">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlUsername"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_3sdp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_medium"
                    android:hint="@string/user_name"
                    android:nextFocusDown="@+id/txtPassword"
                    android:singleLine="true"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    tools:ignore="HardcodedText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_weight="1"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_medium"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    tools:ignore="HardcodedText" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:ignore="DisableBaselineAlignment">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlShop"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_3sdp"
                android:layout_weight="1"
                android:focusable="false"
                app:endIconDrawable="@drawable/vw_ic_arrow_down"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvShop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:fontFamily="@font/gilroy_medium"
                    android:hint="@string/shop"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_10sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlMachineId"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_3sdp"
                android:layout_weight="1"
                android:focusable="false"
                app:endIconDrawable="@drawable/vw_ic_arrow_down"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvMachineId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:fontFamily="@font/gilroy_medium"
                    android:hint="@string/machine_id"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_10sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlEmpId"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_weight="1"
                android:focusable="false"
                app:endIconDrawable="@drawable/vw_ic_arrow_down"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvEmpId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:fontFamily="@font/gilroy_medium"
                    android:hint="@string/emp_id"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_10sdp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_10sdp"
            android:background="@drawable/edittext_bg"
            android:backgroundTint="#0097ff"
            android:fontFamily="@font/gilroy_semibold"
            android:gravity="center"
            android:text="Login"
            android:focusable="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/imgDeltaLogo"
            app:layout_constraintTop_toBottomOf="@id/tlEmpId"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/imgDeltaLogo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_5sdp"
        android:src="@drawable/ic_delta_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lylLogin"
        app:tint="@color/colorAccent"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>