<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_10sdp">

        <ImageView
            android:id="@+id/imgAppLogo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/app_logo"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/lblHeaderLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/gilroy_bold"
            android:gravity="center"
            android:text="Login"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/imgAppLogo"
            tools:ignore="HardcodedText" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLoginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/gilroy_regular"
            android:gravity="center"
            android:text="Please Login To Continue"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@id/lblHeaderLogin"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/tvLoginText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_medium"
                android:hint="@string/user_name"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                tools:ignore="HardcodedText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/tlUsername"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_medium"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                tools:ignore="HardcodedText" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvLableShop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/gilroy_bold"
            android:gravity="center|start"
            android:text="@string/shop"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tlPassword"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlShop"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:focusable="false"
            app:endIconDrawable="@drawable/vw_ic_arrow_down"
            app:endIconMode="custom"
            app:layout_constraintTop_toBottomOf="@id/tvLableShop">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvShop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:fontFamily="@font/gilroy_medium"
                android:hint="@string/shop"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_15sdp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvLableMachineId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/gilroy_bold"
            android:gravity="center|start"
            android:text="@string/machine_id"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tlShop"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlMachineId"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:focusable="false"
            app:endIconDrawable="@drawable/vw_ic_arrow_down"
            app:endIconMode="custom"
            app:layout_constraintTop_toBottomOf="@id/tvLableMachineId">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvMachineId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:fontFamily="@font/gilroy_medium"
                android:hint="@string/machine_id"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_15sdp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvLableEmpId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/gilroy_bold"
            android:gravity="center|start"
            android:text="@string/emp_id"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tlMachineId"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlEmpId"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:focusable="false"
            app:endIconDrawable="@drawable/vw_ic_arrow_down"
            app:endIconMode="custom"
            app:layout_constraintTop_toBottomOf="@id/tvLableEmpId">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvEmpId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:fontFamily="@font/gilroy_medium"
                android:hint="@string/emp_id"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_15sdp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_10sdp"
            android:background="@drawable/edittext_bg"
            android:fontFamily="@font/gilroy_semibold"
            android:gravity="center"
            android:text="Login"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/imgDeltaLogo"
            app:layout_constraintTop_toBottomOf="@id/tlEmpId"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/imgDeltaLogo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:src="@drawable/ic_delta_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLogin"
            app:tint="@color/colorAccent"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>